[BE] TurnstileVerify
